# Chess-Refined

./: README.md
Chess/: CMakeLists.txt
Chess/executables/: Board.cpp  Chess.cpp  Game.cpp  Piece.cpp  Piecetype.cpp  Window.cpp
Chess/headers/: Board.h  Constants.h  Game.h  Piece.h  PieceType.h  Window.h
